# legal-ai-mvp

./: .env.bak  .env.example  .gitignore  AGENTS.md  README.md  REFACTOR.md  config.yaml  demo-simple.ts  index.html  install-workers.bat  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  setup-db.bat  simple-server.js  start-local.bat  start-workers.bat  start.bat  test-e2e.sh  test-real-e2e.sh  tsconfig.json  vitest.config.ts
apps/desktop/: index.html  package.json  tsconfig.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/legal_answers/: assault.md  contract_breach.md  defamation.md  divorce.md  dui.md  fraud.md  inheritance.md  loan.md  overtime.md  probation.md  property.md  rental.md  social_insurance.md  termination.md  theft.md  traffic_accident.md  wages.md  work_injury.md
apps/desktop/src-tauri/src/: ai_engine.rs  database.rs  legal_knowledge.rs  lib.rs  main.rs  search.rs
config/: iii-config.yaml  init.sql  llm-providers.ts  seed.sql
docker/: docker-compose.yml
docs/: worker-integration-plan.md
scripts/: build.mjs  dev.mjs  start-all.sh  start.sh
skills/: legal-analysis.md  legal-docgen.md  legal-knowledge.md
skills/coder/: .iii-skill-complete  SKILL.md
skills/configuration/: .iii-skill-complete
skills/console/: .iii-skill-complete
skills/database/: .iii-skill-complete  SKILL.md
skills/email/: .iii-skill-complete  SKILL.md
skills/harness/: .iii-skill-complete
skills/iii-cron/: .iii-skill-complete
skills/iii-directory/: SKILL.md  (+1 more)
(+52 files in other folders)
