[package]
name = "legalai-desktop"
version = "0.1.0"
description = "法律AI知识库 - 桌面壳（业务由 iii worker 承担）"
authors = ["LegalAI Team"]
edition = "2021"

[lib]
name = "legalai_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri 核心 + shell 插件（用于加载 webview）
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"

# 最小运行时（serde 用于 tauri 内部 command 序列化，业务方已迁出）
serde = { version = "1", features = ["derive"] }
serde_json = "1"
